# audio-services

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  transcript.json
.github/workflows/: build-test-release.yml  transcribe.yml
.github/workflows/apps/: transcribe.yml
apps/app1/: app.py
apps/transcribe-rest-api/: api.py
cmd/transcribe/: Dockerfile  Dockerfile.v1  generate_spec.py  transcribe.mk  transcribe.py
docs/: devx.md
libs/audio_recorder/: apple_audio_recorder_mic.py  audio_recorder.py
libs/audio_recorder/tests/: test_audio_recorder.py  test_system_audio_recorder.py
libs/log/: logger.py
libs/transcript_processor/: transcript_file.py  transcript_segment.py  whisper_processor.py
libs/transcript_processor/tests/: audiotest.m4a  test_whisperer_processor.py
libs/whisper_processor/tests/: test_whisperer_processor.py
